# loyal.fun

./: .gitignore  Anchor.toml  Cargo.toml  README.en.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-programs.yml
app/: .env.local.example  next.config.mjs  package.json  tailwind.config.ts
app/public/: manifest.json
app/public/idl/: loyal_core.json  loyal_hook.json
app/scripts/: patch-pyth-exports.cjs
app/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
app/src/app/degen/: PositionSheet.tsx  page.tsx
app/src/app/demo-merchant/: page.tsx
app/src/app/leaderboard/: page.tsx
app/src/app/market/: page.tsx
app/src/app/merchant/: page.tsx
app/src/app/profile/: page.tsx
app/src/app/scan/: page.tsx
app/src/app/shops/: page.tsx
app/src/components/: TabBar.tsx  TxToast.tsx  icons.tsx  ui.tsx  viz.tsx
app/src/lib/: actions.ts  config.ts  das.ts  history.ts  pdas.ts  priceHistory.ts  program.ts  pyth.ts  queries.ts  redeem.ts  relayer.ts  saleQr.ts  verifyRedeem.ts  wallet.ts
keys/: loyal_core-keypair.json  loyal_hook-keypair.json
prebuilt/: SHA256SUMS
programs/loyal_core/: Cargo.toml
programs/loyal_core/src/: constants.rs  errors.rs  events.rs  lib.rs  math.rs  state.rs
programs/loyal_core/src/instructions/: admin.rs  badges.rs  issue_points.rs  marketplace.rs  merchant.rs  mod.rs  positions.rs  vaults.rs
programs/loyal_core/src/utils/: ed25519.rs  mod.rs  oracle.rs  token2022.rs
programs/loyal_hook/: Cargo.toml
programs/loyal_hook/src/: lib.rs
relayer/: .env.example  package.json  tsconfig.json
relayer/src/: index.ts
scripts/: common.ts  create_vaults.ts  deploy.ts  mnemonic_to_keypair.ts  phantom_to_keypair.ts  seed_demo.ts  seed_screenshot_wallet.ts  stub-jito-empty.cjs  stub-jito.cjs
tests/: helpers.ts  loyal_core.test.ts
tests/unit/: pnl_math.test.ts
(+6 files in other folders)
