[workspace]
members = ["programs/loyal_core", "programs/loyal_hook"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
# Size-optimized: devnet rent scales with binary size (~7 SOL/MB).
opt-level = "z"
strip = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
