[package]
name = "loyal_hook"
version = "0.1.0"
description = "loyal.fun transfer hook: enforces the closed loop on the $LOYAL Token-2022 mint"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "loyal_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
spl-transfer-hook-interface = "0.9.0"
spl-tlv-account-resolution = "0.9.0"
